# wyggles

./: .gitmodules  README.md  data.py  main.py  pyproject.toml  requirements.txt
assets/: images.tsx  level1.tmx  tiles.tsx
wyggles/: app.py  apple.py  assets.py  ball.py  beacon.py  box.py  brain.py  engine.py  fruit.py  layer.py  mathutils.py  sprite.py  wyggle.py
wyggles/sprite/: beacon.py  body.py  collision.py  edge.py  engine.py  sprite.py
wyggles/wyggle/: brain.py  dna.py  protobrain.py  wyggle.py
wyggles/wyggle/brains/: default.py  neuron.py  proto.py  reactive.py
